[gd_scene load_steps=5 format=3 uid="uid://dthd0gs3c414o"]

[ext_resource type="TileSet" uid="uid://cfr3g543ytxy1" path="res://levels/tileset.tres" id="1_maze_tileset"]
[ext_resource type="Script" uid="uid://b3hsjehptw4gj" path="res://levels/MazeStyle.gd" id="2_gfk5l"]
[ext_resource type="Script" uid="uid://cvfoctp3limx8" path="res://levels/MazeGenerator.gd" id="2_maze_script"]
[ext_resource type="MazeStyle" uid="uid://bvsv4l2n7g6lh" path="res://levels/styles/railway_with_walls.tres" id="3_wm03m"]

[node name="MazeGenerator" type="Node2D"]
script = ExtResource("2_maze_script")
available_styles = Array[ExtResource("2_gfk5l")]([ExtResource("3_wm03m")])

[node name="PassageTileMapLayer" type="TileMapLayer" parent="."]
position = Vector2(200, 200)
tile_set = ExtResource("1_maze_tileset")

[node name="WallTileMapLayer" type="TileMapLayer" parent="."]
position = Vector2(200, 200)
tile_set = ExtResource("1_maze_tileset")

[node name="ObjectTileMapLayer" type="TileMapLayer" parent="."]
position = Vector2(200, 200)
tile_set = ExtResource("1_maze_tileset")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 300.0
offset_bottom = 200.0
scale = Vector2(2, 2)

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
layout_mode = 1
offset_left = 10.0
offset_top = 10.0
offset_right = 290.0
offset_bottom = 190.0

[node name="Title" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Railway Maze Generator"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="UI/VBoxContainer"]
layout_mode = 2

[node name="SizeContainer" type="HBoxContainer" parent="UI/VBoxContainer"]
layout_mode = 2

[node name="SizeLabel" type="Label" parent="UI/VBoxContainer/SizeContainer"]
layout_mode = 2
text = "Size:"

[node name="WidthSpinBox" type="SpinBox" parent="UI/VBoxContainer/SizeContainer"]
layout_mode = 2
min_value = 5.0
max_value = 50.0
step = 2.0
value = 21.0

[node name="XLabel" type="Label" parent="UI/VBoxContainer/SizeContainer"]
layout_mode = 2
text = "x"

[node name="HeightSpinBox" type="SpinBox" parent="UI/VBoxContainer/SizeContainer"]
layout_mode = 2
min_value = 5.0
max_value = 50.0
step = 2.0
value = 21.0

[node name="HSeparator2" type="HSeparator" parent="UI/VBoxContainer"]
layout_mode = 2

[node name="StyleContainer" type="HBoxContainer" parent="UI/VBoxContainer"]
layout_mode = 2

[node name="StyleLabel" type="Label" parent="UI/VBoxContainer/StyleContainer"]
layout_mode = 2
text = "Style:"

[node name="StyleDropdown" type="OptionButton" parent="UI/VBoxContainer/StyleContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HSeparator3" type="HSeparator" parent="UI/VBoxContainer"]
layout_mode = 2

[node name="GenerateButton" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Generate Maze"

[node name="ClearButton" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Clear"

[node name="HSeparator4" type="HSeparator" parent="UI/VBoxContainer"]
layout_mode = 2

[node name="InfoLabel" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Status: Ready"
autowrap_mode = 2
